# AI-Document-Intelligence-for-Policy-Human-Rights-Reports-in-Africa-

./: .gitignore  README.md  pyproject.toml
.refinery/: extraction_ledger.jsonl  fact_table.db
.refinery/chunks/: 5e2d36d38ffb.json
.refinery/extractions/: 1598936aa649.json  1598936aa649_tax_expenditure_ethiopia_2021_22_pdf.json  21af89b71835.json  21af89b71835_CBE_Annual_Report_2008_9_pdf.json  5e2d36d38ffb.json  5e2d36d38ffb_fta_performance_survey_final_report_2022_pdf.json  8fe6f6f95487.json  8fe6f6f95487_2013_E_C_Audit_finding_information_pdf.json  93547808847b.json  93547808847b_Audit_Report_2023_pdf.json  98300eef1410.json  98300eef1410_A_HRC_51_46_EN_pdf.json  a1fd281455d9.json  a1fd281455d9_Ethiopia_RPRF_11032024_pdf.json  a81ffde3392d.json  b953ed391ea1.json  b953ed391ea1_A_HRC_51_46_FR_pdf.json  d511c082e24c.json  d511c082e24c_Ethiopia_pdf.json  f2049718f9ff.json  f2049718f9ff_IDU_c8669478_c9e4_4199_88f9_b2c0a1d00396_pdf.json  fe02e39c3282.json  fe02e39c3282_World_Report_2025_Ethiopia_Human_Rights_Watch_pdf.json
.refinery/pageindex/: 1598936aa649.json  21af89b71835.json  5e2d36d38ffb.json  8fe6f6f95487.json  93547808847b.json  98300eef1410.json  a1fd281455d9.json  a81ffde3392d.json  b953ed391ea1.json  d511c082e24c.json  f2049718f9ff.json  fe02e39c3282.json
.refinery/profiles/: 1598936aa649.json  21af89b71835.json  (+11 more)
docs/: DOMAIN_NOTES.md
rubric/: chunking_rules.yaml  civic_keywords.yaml  extraction_rules.yaml
scripts/: batch_triage.py  build_fact_table.py  evaluate_retrieval.py  extract_all.py  run_phase3.py
tests/: test_document.py  test_triage.py
(+27 files in other folders)
